# lazyssh

./: .gitignore  Cargo.toml  INSTALL.md  PUBLISHING.md  README.md  README.zh.md  RELEASE_CHECKLIST.md  install.sh  lazyssh.spec
.github/workflows/: build-rpm.yml  release.yml
Formula/: lazyssh.rb
src/: config.rs  i18n.rs  lib.rs  main.rs  ui.rs
tests/: config_test.rs  i18n_test.rs  ui_test.rs
